Bug 1730079 [Wayland] Get popup text direction by nsWindow::IsPopupDirectionRTL(), r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D125152